// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox component isDisabled 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-text-1rynq56"
            data-style="182qhvf-1mprjgs 182qhvf-1j1xgf6"
            dir="auto"
          >
            (Selected: 0)
          </div>
          <div
            aria-disabled={true}
            className="css-view-175oi2r"
            data-style="896xuz-1q64x7k"
            dir={null}
            id="checkbox-group"
            role="group"
          >
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
<<<<<<< HEAD
              data-style="1p9eydi-1mdhnmt 1p9eydi-1ebsp7h 1p9eydi-1amfmud"
=======
              data-style="y83adm-1mdhnmt y83adm-1ebsp7h y83adm-1amfmud"
>>>>>>> 8f35c7dd18ffbf7418cd09b74d0545eae979bbfb
              dir={null}
              id="checkbox-1"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": 1,
                    "margin": "0 -1px -1px 0",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": 1,
                  }
                }
              >
                <input
                  aria-label="Label 1"
                  checked={false}
                  disabled={true}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 1"
                />
              </div>
              <div
                className="css-view-175oi2r"
<<<<<<< HEAD
                data-style="1llw3v1-1jvh2c 1llw3v1-k4pcl5"
=======
                data-style="rktiq5-1jvh2c rktiq5-11wy4tg bwxc0z-ygf2ke"
>>>>>>> 8f35c7dd18ffbf7418cd09b74d0545eae979bbfb
                dir={null}
              >
                <svg
                  data-style="b2xdcj-41m04e b2xdcj-qq5o9s 1ce6dyn-odyoag 896xuz-1q64x7k"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <path
                      d="M8.53115 15.1856L3.96198 10.744L2 12.6512L8.53115 19L22 5.9072L20.038 4L8.53115 15.1856Z"
                      fill="currentColor"
                      stroke=""
                    />
                  </g>
                </svg>
              </div>
              <div
                className="css-text-1rynq56"
<<<<<<< HEAD
                data-style="y756bg-1kmwrjt y756bg-qc5mdn"
=======
                data-style="1cd1m6a-q863cm 1cd1m6a-11wy4tg"
>>>>>>> 8f35c7dd18ffbf7418cd09b74d0545eae979bbfb
                dir="auto"
              >
                Label 1
              </div>
            </label>
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
<<<<<<< HEAD
              data-style="1p9eydi-1mdhnmt 1p9eydi-1ebsp7h 1p9eydi-1amfmud"
=======
              data-style="y83adm-1mdhnmt y83adm-1ebsp7h y83adm-1amfmud"
>>>>>>> 8f35c7dd18ffbf7418cd09b74d0545eae979bbfb
              dir={null}
              id="checkbox-2"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": 1,
                    "margin": "0 -1px -1px 0",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": 1,
                  }
                }
              >
                <input
                  aria-label="Label 2"
                  checked={false}
                  disabled={true}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 2"
                />
              </div>
              <div
                className="css-view-175oi2r"
<<<<<<< HEAD
                data-style="1llw3v1-1jvh2c 1llw3v1-k4pcl5"
=======
                data-style="rktiq5-1jvh2c rktiq5-11wy4tg bwxc0z-ygf2ke"
>>>>>>> 8f35c7dd18ffbf7418cd09b74d0545eae979bbfb
                dir={null}
              >
                <svg
                  data-style="b2xdcj-41m04e b2xdcj-qq5o9s 1ce6dyn-odyoag 896xuz-1q64x7k"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <path
                      d="M8.53115 15.1856L3.96198 10.744L2 12.6512L8.53115 19L22 5.9072L20.038 4L8.53115 15.1856Z"
                      fill="currentColor"
                      stroke=""
                    />
                  </g>
                </svg>
              </div>
              <div
                className="css-text-1rynq56"
<<<<<<< HEAD
                data-style="y756bg-1kmwrjt y756bg-qc5mdn"
=======
                data-style="1cd1m6a-q863cm 1cd1m6a-11wy4tg"
>>>>>>> 8f35c7dd18ffbf7418cd09b74d0545eae979bbfb
                dir="auto"
              >
                Label 2
              </div>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Checkbox component isInvalid 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-text-1rynq56"
            data-style="182qhvf-1mprjgs 182qhvf-1j1xgf6"
            dir="auto"
          >
            (Selected: 0)
          </div>
          <div
            className="css-view-175oi2r"
            data-style="896xuz-1q64x7k"
            dir={null}
            id="checkbox-group"
            role="group"
          >
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
<<<<<<< HEAD
              data-style="1p9eydi-1mdhnmt 1p9eydi-1ebsp7h"
=======
              data-style="y83adm-1mdhnmt y83adm-1ebsp7h"
>>>>>>> 8f35c7dd18ffbf7418cd09b74d0545eae979bbfb
              dir={null}
              id="checkbox-1"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": 1,
                    "margin": "0 -1px -1px 0",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": 1,
                  }
                }
              >
                <input
                  aria-label="Label 1"
                  checked={false}
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 1"
                />
              </div>
              <div
                className="css-view-175oi2r"
<<<<<<< HEAD
                data-style="1llw3v1-1jvh2c 1llw3v1-17xx5qx"
=======
                data-style="rktiq5-1jvh2c rktiq5-zjvgbf bwxc0z-ygf2ke"
>>>>>>> 8f35c7dd18ffbf7418cd09b74d0545eae979bbfb
                dir={null}
              >
                <svg
                  data-style="b2xdcj-41m04e 1ce6dyn-odyoag 896xuz-1q64x7k"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <path
                      d="M8.53115 15.1856L3.96198 10.744L2 12.6512L8.53115 19L22 5.9072L20.038 4L8.53115 15.1856Z"
                      fill="currentColor"
                      stroke=""
                    />
                  </g>
                </svg>
              </div>
              <div
                className="css-text-1rynq56"
<<<<<<< HEAD
                data-style="y756bg-1kmwrjt"
=======
                data-style="1cd1m6a-q863cm"
>>>>>>> 8f35c7dd18ffbf7418cd09b74d0545eae979bbfb
                dir="auto"
              >
                Label 1
              </div>
            </label>
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
<<<<<<< HEAD
              data-style="1p9eydi-1mdhnmt 1p9eydi-1ebsp7h"
=======
              data-style="y83adm-1mdhnmt y83adm-1ebsp7h"
>>>>>>> 8f35c7dd18ffbf7418cd09b74d0545eae979bbfb
              dir={null}
              id="checkbox-2"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": 1,
                    "margin": "0 -1px -1px 0",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": 1,
                  }
                }
              >
                <input
                  aria-label="Label 2"
                  checked={false}
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 2"
                />
              </div>
              <div
                className="css-view-175oi2r"
<<<<<<< HEAD
                data-style="1llw3v1-1jvh2c 1llw3v1-17xx5qx"
=======
                data-style="rktiq5-1jvh2c rktiq5-zjvgbf bwxc0z-ygf2ke"
>>>>>>> 8f35c7dd18ffbf7418cd09b74d0545eae979bbfb
                dir={null}
              >
                <svg
                  data-style="b2xdcj-41m04e 1ce6dyn-odyoag 896xuz-1q64x7k"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <path
                      d="M8.53115 15.1856L3.96198 10.744L2 12.6512L8.53115 19L22 5.9072L20.038 4L8.53115 15.1856Z"
                      fill="currentColor"
                      stroke=""
                    />
                  </g>
                </svg>
              </div>
              <div
                className="css-text-1rynq56"
<<<<<<< HEAD
                data-style="y756bg-1kmwrjt"
=======
                data-style="1cd1m6a-q863cm"
>>>>>>> 8f35c7dd18ffbf7418cd09b74d0545eae979bbfb
                dir="auto"
              >
                Label 2
              </div>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Checkbox component isReadOnly 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-text-1rynq56"
            data-style="182qhvf-1mprjgs 182qhvf-1j1xgf6"
            dir="auto"
          >
            (Selected: 0)
          </div>
          <div
            className="css-view-175oi2r"
            data-style="896xuz-1q64x7k"
            dir={null}
            id="checkbox-group"
            role="group"
          >
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
<<<<<<< HEAD
              data-style="1p9eydi-1mdhnmt 1p9eydi-1ebsp7h"
=======
              data-style="y83adm-1mdhnmt y83adm-1ebsp7h"
>>>>>>> 8f35c7dd18ffbf7418cd09b74d0545eae979bbfb
              dir={null}
              id="checkbox-1"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": 1,
                    "margin": "0 -1px -1px 0",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": 1,
                  }
                }
              >
                <input
                  aria-label="Label 1"
                  aria-readonly={true}
                  checked={false}
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 1"
                />
              </div>
              <div
                className="css-view-175oi2r"
<<<<<<< HEAD
                data-style="1llw3v1-1jvh2c"
=======
                data-style="rktiq5-1jvh2c bwxc0z-ygf2ke"
>>>>>>> 8f35c7dd18ffbf7418cd09b74d0545eae979bbfb
                dir={null}
              >
                <svg
                  data-style="b2xdcj-41m04e 1ce6dyn-odyoag 896xuz-1q64x7k"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <path
                      d="M8.53115 15.1856L3.96198 10.744L2 12.6512L8.53115 19L22 5.9072L20.038 4L8.53115 15.1856Z"
                      fill="currentColor"
                      stroke=""
                    />
                  </g>
                </svg>
              </div>
              <div
                className="css-text-1rynq56"
<<<<<<< HEAD
                data-style="y756bg-1kmwrjt"
=======
                data-style="1cd1m6a-q863cm"
>>>>>>> 8f35c7dd18ffbf7418cd09b74d0545eae979bbfb
                dir="auto"
              >
                Label 1
              </div>
            </label>
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
<<<<<<< HEAD
              data-style="1p9eydi-1mdhnmt 1p9eydi-1ebsp7h"
=======
              data-style="y83adm-1mdhnmt y83adm-1ebsp7h"
>>>>>>> 8f35c7dd18ffbf7418cd09b74d0545eae979bbfb
              dir={null}
              id="checkbox-2"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": 1,
                    "margin": "0 -1px -1px 0",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": 1,
                  }
                }
              >
                <input
                  aria-label="Label 2"
                  aria-readonly={true}
                  checked={false}
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 2"
                />
              </div>
              <div
                className="css-view-175oi2r"
<<<<<<< HEAD
                data-style="1llw3v1-1jvh2c"
=======
                data-style="rktiq5-1jvh2c bwxc0z-ygf2ke"
>>>>>>> 8f35c7dd18ffbf7418cd09b74d0545eae979bbfb
                dir={null}
              >
                <svg
                  data-style="b2xdcj-41m04e 1ce6dyn-odyoag 896xuz-1q64x7k"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <path
                      d="M8.53115 15.1856L3.96198 10.744L2 12.6512L8.53115 19L22 5.9072L20.038 4L8.53115 15.1856Z"
                      fill="currentColor"
                      stroke=""
                    />
                  </g>
                </svg>
              </div>
              <div
                className="css-text-1rynq56"
<<<<<<< HEAD
                data-style="y756bg-1kmwrjt"
=======
                data-style="1cd1m6a-q863cm"
>>>>>>> 8f35c7dd18ffbf7418cd09b74d0545eae979bbfb
                dir="auto"
              >
                Label 2
              </div>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Checkbox component size lg 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-text-1rynq56"
            data-style="182qhvf-1mprjgs 182qhvf-1j1xgf6"
            dir="auto"
          >
            (Selected: 0)
          </div>
          <div
            className="css-view-175oi2r"
            data-style="896xuz-1q64x7k"
            dir={null}
            id="checkbox-group"
            role="group"
          >
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
<<<<<<< HEAD
              data-style="1p9eydi-1mdhnmt 1p9eydi-ksaz4x"
=======
              data-style="y83adm-1mdhnmt y83adm-ksaz4x"
>>>>>>> 8f35c7dd18ffbf7418cd09b74d0545eae979bbfb
              dir={null}
              id="checkbox-1"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": 1,
                    "margin": "0 -1px -1px 0",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": 1,
                  }
                }
              >
                <input
                  aria-label="Label 1"
                  checked={false}
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 1"
                />
              </div>
              <div
                className="css-view-175oi2r"
<<<<<<< HEAD
                data-style="1llw3v1-1jvh2c 1p9eydi-1tbck4z"
=======
                data-style="rktiq5-1jvh2c y83adm-1tbck4z bwxc0z-ygf2ke"
>>>>>>> 8f35c7dd18ffbf7418cd09b74d0545eae979bbfb
                dir={null}
              >
                <svg
                  data-style="b2xdcj-41m04e 1p9eydi-wnd9tc 1ce6dyn-odyoag 896xuz-1q64x7k 1p9eydi-wnd9tc"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <path
                      d="M8.53115 15.1856L3.96198 10.744L2 12.6512L8.53115 19L22 5.9072L20.038 4L8.53115 15.1856Z"
                      fill="currentColor"
                      stroke=""
                    />
                  </g>
                </svg>
              </div>
              <div
                className="css-text-1rynq56"
<<<<<<< HEAD
                data-style="y756bg-1kmwrjt 1p9eydi-17ut2f4"
=======
                data-style="1cd1m6a-q863cm y83adm-16we7vb"
>>>>>>> 8f35c7dd18ffbf7418cd09b74d0545eae979bbfb
                dir="auto"
              >
                Label 1
              </div>
            </label>
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
<<<<<<< HEAD
              data-style="1p9eydi-1mdhnmt 1p9eydi-ksaz4x"
=======
              data-style="y83adm-1mdhnmt y83adm-ksaz4x"
>>>>>>> 8f35c7dd18ffbf7418cd09b74d0545eae979bbfb
              dir={null}
              id="checkbox-2"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": 1,
                    "margin": "0 -1px -1px 0",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": 1,
                  }
                }
              >
                <input
                  aria-label="Label 2"
                  checked={false}
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 2"
                />
              </div>
              <div
                className="css-view-175oi2r"
<<<<<<< HEAD
                data-style="1llw3v1-1jvh2c 1p9eydi-1tbck4z"
=======
                data-style="rktiq5-1jvh2c y83adm-1tbck4z bwxc0z-ygf2ke"
>>>>>>> 8f35c7dd18ffbf7418cd09b74d0545eae979bbfb
                dir={null}
              >
                <svg
                  data-style="b2xdcj-41m04e 1p9eydi-wnd9tc 1ce6dyn-odyoag 896xuz-1q64x7k 1p9eydi-wnd9tc"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <path
                      d="M8.53115 15.1856L3.96198 10.744L2 12.6512L8.53115 19L22 5.9072L20.038 4L8.53115 15.1856Z"
                      fill="currentColor"
                      stroke=""
                    />
                  </g>
                </svg>
              </div>
              <div
                className="css-text-1rynq56"
<<<<<<< HEAD
                data-style="y756bg-1kmwrjt 1p9eydi-17ut2f4"
=======
                data-style="1cd1m6a-q863cm y83adm-16we7vb"
>>>>>>> 8f35c7dd18ffbf7418cd09b74d0545eae979bbfb
                dir="auto"
              >
                Label 2
              </div>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Checkbox component size md 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-text-1rynq56"
            data-style="182qhvf-1mprjgs 182qhvf-1j1xgf6"
            dir="auto"
          >
            (Selected: 0)
          </div>
          <div
            className="css-view-175oi2r"
            data-style="896xuz-1q64x7k"
            dir={null}
            id="checkbox-group"
            role="group"
          >
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
<<<<<<< HEAD
              data-style="1p9eydi-1mdhnmt 1p9eydi-1ebsp7h"
=======
              data-style="y83adm-1mdhnmt y83adm-1ebsp7h"
>>>>>>> 8f35c7dd18ffbf7418cd09b74d0545eae979bbfb
              dir={null}
              id="checkbox-1"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": 1,
                    "margin": "0 -1px -1px 0",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": 1,
                  }
                }
              >
                <input
                  aria-label="Label 1"
                  checked={false}
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 1"
                />
              </div>
              <div
                className="css-view-175oi2r"
<<<<<<< HEAD
                data-style="1llw3v1-1jvh2c 1p9eydi-10d27qj"
=======
                data-style="rktiq5-1jvh2c y83adm-10d27qj bwxc0z-ygf2ke"
>>>>>>> 8f35c7dd18ffbf7418cd09b74d0545eae979bbfb
                dir={null}
              >
                <svg
                  data-style="b2xdcj-41m04e 1p9eydi-lfqm4y 1ce6dyn-odyoag 896xuz-1q64x7k 1p9eydi-lfqm4y"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <path
                      d="M8.53115 15.1856L3.96198 10.744L2 12.6512L8.53115 19L22 5.9072L20.038 4L8.53115 15.1856Z"
                      fill="currentColor"
                      stroke=""
                    />
                  </g>
                </svg>
              </div>
              <div
                className="css-text-1rynq56"
<<<<<<< HEAD
                data-style="y756bg-1kmwrjt 1p9eydi-vq6gb4"
=======
                data-style="1cd1m6a-q863cm y83adm-1kgcnw5"
>>>>>>> 8f35c7dd18ffbf7418cd09b74d0545eae979bbfb
                dir="auto"
              >
                Label 1
              </div>
            </label>
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
<<<<<<< HEAD
              data-style="1p9eydi-1mdhnmt 1p9eydi-1ebsp7h"
=======
              data-style="y83adm-1mdhnmt y83adm-1ebsp7h"
>>>>>>> 8f35c7dd18ffbf7418cd09b74d0545eae979bbfb
              dir={null}
              id="checkbox-2"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": 1,
                    "margin": "0 -1px -1px 0",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": 1,
                  }
                }
              >
                <input
                  aria-label="Label 2"
                  checked={false}
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 2"
                />
              </div>
              <div
                className="css-view-175oi2r"
<<<<<<< HEAD
                data-style="1llw3v1-1jvh2c 1p9eydi-10d27qj"
=======
                data-style="rktiq5-1jvh2c y83adm-10d27qj bwxc0z-ygf2ke"
>>>>>>> 8f35c7dd18ffbf7418cd09b74d0545eae979bbfb
                dir={null}
              >
                <svg
                  data-style="b2xdcj-41m04e 1p9eydi-lfqm4y 1ce6dyn-odyoag 896xuz-1q64x7k 1p9eydi-lfqm4y"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <path
                      d="M8.53115 15.1856L3.96198 10.744L2 12.6512L8.53115 19L22 5.9072L20.038 4L8.53115 15.1856Z"
                      fill="currentColor"
                      stroke=""
                    />
                  </g>
                </svg>
              </div>
              <div
                className="css-text-1rynq56"
<<<<<<< HEAD
                data-style="y756bg-1kmwrjt 1p9eydi-vq6gb4"
=======
                data-style="1cd1m6a-q863cm y83adm-1kgcnw5"
>>>>>>> 8f35c7dd18ffbf7418cd09b74d0545eae979bbfb
                dir="auto"
              >
                Label 2
              </div>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Checkbox component size sm 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-text-1rynq56"
            data-style="182qhvf-1mprjgs 182qhvf-1j1xgf6"
            dir="auto"
          >
            (Selected: 0)
          </div>
          <div
            className="css-view-175oi2r"
            data-style="896xuz-1q64x7k"
            dir={null}
            id="checkbox-group"
            role="group"
          >
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
<<<<<<< HEAD
              data-style="1p9eydi-1mdhnmt 1p9eydi-1ksor04"
=======
              data-style="y83adm-1mdhnmt y83adm-1ksor04"
>>>>>>> 8f35c7dd18ffbf7418cd09b74d0545eae979bbfb
              dir={null}
              id="checkbox-1"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": 1,
                    "margin": "0 -1px -1px 0",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": 1,
                  }
                }
              >
                <input
                  aria-label="Label 1"
                  checked={false}
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 1"
                />
              </div>
              <div
                className="css-view-175oi2r"
<<<<<<< HEAD
                data-style="1llw3v1-1jvh2c 1p9eydi-1rh3r0r"
=======
                data-style="rktiq5-1jvh2c y83adm-1rh3r0r bwxc0z-ygf2ke"
>>>>>>> 8f35c7dd18ffbf7418cd09b74d0545eae979bbfb
                dir={null}
              >
                <svg
                  data-style="b2xdcj-41m04e 1p9eydi-14om591 1ce6dyn-odyoag 896xuz-1q64x7k 1p9eydi-14om591"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <path
                      d="M8.53115 15.1856L3.96198 10.744L2 12.6512L8.53115 19L22 5.9072L20.038 4L8.53115 15.1856Z"
                      fill="currentColor"
                      stroke=""
                    />
                  </g>
                </svg>
              </div>
              <div
                className="css-text-1rynq56"
<<<<<<< HEAD
                data-style="y756bg-1kmwrjt 1p9eydi-12m2qyn"
=======
                data-style="1cd1m6a-q863cm y83adm-11ecfm0"
>>>>>>> 8f35c7dd18ffbf7418cd09b74d0545eae979bbfb
                dir="auto"
              >
                Label 1
              </div>
            </label>
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
<<<<<<< HEAD
              data-style="1p9eydi-1mdhnmt 1p9eydi-1ksor04"
=======
              data-style="y83adm-1mdhnmt y83adm-1ksor04"
>>>>>>> 8f35c7dd18ffbf7418cd09b74d0545eae979bbfb
              dir={null}
              id="checkbox-2"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": 1,
                    "margin": "0 -1px -1px 0",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": 1,
                  }
                }
              >
                <input
                  aria-label="Label 2"
                  checked={false}
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 2"
                />
              </div>
              <div
                className="css-view-175oi2r"
<<<<<<< HEAD
                data-style="1llw3v1-1jvh2c 1p9eydi-1rh3r0r"
=======
                data-style="rktiq5-1jvh2c y83adm-1rh3r0r bwxc0z-ygf2ke"
>>>>>>> 8f35c7dd18ffbf7418cd09b74d0545eae979bbfb
                dir={null}
              >
                <svg
                  data-style="b2xdcj-41m04e 1p9eydi-14om591 1ce6dyn-odyoag 896xuz-1q64x7k 1p9eydi-14om591"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <path
                      d="M8.53115 15.1856L3.96198 10.744L2 12.6512L8.53115 19L22 5.9072L20.038 4L8.53115 15.1856Z"
                      fill="currentColor"
                      stroke=""
                    />
                  </g>
                </svg>
              </div>
              <div
                className="css-text-1rynq56"
<<<<<<< HEAD
                data-style="y756bg-1kmwrjt 1p9eydi-12m2qyn"
=======
                data-style="1cd1m6a-q863cm y83adm-11ecfm0"
>>>>>>> 8f35c7dd18ffbf7418cd09b74d0545eae979bbfb
                dir="auto"
              >
                Label 2
              </div>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
